# wayland-protocols

./: Makefile.am  configure.ac  wayland.doxygen.in
doc/: mainpage.dox
unstable/gamedev/: README  gamedev-unstable-v1.xml
unstable/inputfd/: README  inputfd-unstable-v1.xml
unstable/tablet/: tablet-unstable-v1.xml  tablet-unstable-v2.xml
unstable/wayland-tablet/: wayland-tablet-unstable-v1.xml
